--- a/emporium/templates/base.html
+++ b/emporium/templates/base.html
@@ -33,4 +33,9 @@
         {% block top_top %}
         {% endblock %}
     </div>
+
+    <div class="w-100 mt-3">
+        {% block body %}
+        {% endblock %}
+    </div>
 </body>
