Many style/CSS updates.

--- a/apps/garage/templates/garage/base/base_garage.html
+++ b/apps/garage/templates/garage/base/base_garage.html
@@ -7,3 +7,7 @@
 <div class="banner index-color mb-2">{{banner}}</div>
 {% endif %}
 {% endblock %}
+
+{% block extra_head %}
+<link rel="stylesheet" type="text/css" href="{% static 'garage/css/garage.css' %}" />
+{% endblock %}
