--- a/apps/garage/templates/garage/main.html
+++ b/apps/garage/templates/garage/main.html
@@ -3,9 +3,20 @@
 {% load static %}
 
 {% block body %}
-<ul>
+<div class="main-table-grid mt-3 w-75">
+    <div class="main-table-grid-head">Dirección</div>
+    <div class="main-table-grid-head">Planta y número</div>
+    <div class="main-table-grid-head">Inmobiliaria</div>
+    <div class="main-table-grid-head">Precio</div>
+    <div class="main-table-grid-head">Alquiler</div>
+    <div class="main-table-grid-head">Beneficio anual</div>
 {% for garage in garages %}
-    <li>{{garage.address}} #{{garage.number}}: {{garage.net_yearly_revenue_percent|floatformat:2}} %</li>
+    <div>{{garage.address}}</div>
+    <div>xxx : {{garage.number}}</div>
+    <div>{{garage.real_estate}}</div>
+    <div>{{garage.asking_price}}</div>
+    <div>{{garage.expected_rent}}</div>
+    <div>{{garage.net_yearly_revenue_percent|floatformat:2}} %</div>
 {% endfor %}
-</ul>
+</div>
 {% endblock %}
