--- a/apps/garage/templates/garage/base/base_garage.html
+++ b/apps/garage/templates/garage/base/base_garage.html
@@ -11,3 +11,15 @@
 {% block extra_head %}
 <link rel="stylesheet" type="text/css" href="{% static 'garage/css/garage.css' %}" />
 {% endblock %}
+
+{% block top_left %}
+{% include "top_left_menu.html" %}
+{% endblock %}
+
+{% block top_middle %}
+<div></div>
+{% endblock %}
+
+{% block top_right %}
+{% include "top_user_menu.html" %}
+{% endblock %}
