--- a/emporium/templates/base.html
+++ b/emporium/templates/base.html
@@ -34,6 +34,21 @@
         {% endblock %}
     </div>
 
+    <div class="top-menu-grid">
+        {% block top_left %}
+        {% endblock %}
+
+        <div></div>
+
+        {% block top_middle %}
+        {% endblock %}
+
+        <div></div>
+
+        {% block top_right %}
+        {% endblock %}
+    </div>
+
     <div class="w-100 mt-3">
         {% block body %}
         {% endblock %}
