Start with Lease creation code.

--- a/apps/leases/templates/leases/base/base_leases.html
+++ b/apps/leases/templates/leases/base/base_leases.html
@@ -10,6 +10,7 @@
 
 {% block extra_head %}
 <link rel="stylesheet" type="text/css" href="{% static 'leases/css/leases.css' %}" />
+<script src="{% static 'leases/js/leases.js' %}"></script>
 {% endblock %}
 
 {% block top_left %}
