--- a/emporium/templates/top_left_menu.html
+++ b/emporium/templates/top_left_menu.html
@@ -5,5 +5,5 @@
        href="{% url 'garage:main' %}">Garages</a>
 
     <a class="btn {% if leases_active %} btn-primary {% else %} btn-secondary {% endif %}"
-       href="{% url 'leases:main' %}">Leases</a>
+       href="{% url 'leases:main' %}">Contratos</a>
 </div>
