--- a/apps/leases/static/leases/css/leases.css
+++ b/apps/leases/static/leases/css/leases.css
@@ -1,11 +1,11 @@
-.main-table-grid {
+.lease-table-grid {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     grid-gap: 5px;
 }
 
-.main-table-grid-head {
+.lease-table-grid-head {
     font-weight: bold;
     color: #2222cc;
 }
