--- a/apps/leases/templates/leases/main.html
+++ b/apps/leases/templates/leases/main.html
@@ -3,13 +3,11 @@
 {% load static %}
 
 {% block body %}
-<div class="main-table-grid mt-3 w-75">
-    <div class="main-table-grid-head">Arrendatario</div>
-    <div class="main-table-grid-head">Fecha inicio</div>
-    <div class="main-table-grid-head">Fecha fin</div>
-    <div class="main-table-grid-head">Status</div>
-    <div></div>
-    <div></div>
+<div class="lease-table-grid mt-3 w-50">
+    <div class="lease-table-grid-head">Arrendatario</div>
+    <div class="lease-table-grid-head">Fecha inicio</div>
+    <div class="lease-table-grid-head">Fecha fin</div>
+    <div class="lease-table-grid-head">Status</div>
     {% for lease in data %}
         <div>{{lease.resident.name}}</div>
         <div>{{lease.start_date}}</div>
@@ -25,9 +23,23 @@
         {% else %}
             <div></div>
         {% endif %}
-        <div></div>
-        <div></div>
     {% endfor %}
+    <div class="mt-3" style="grid-column: 1 / span 1">
+        <button class="btn btn-success" onclick="mytoggle('add_lease')">Nuevo contrato</button>
+    </div>
+</div>
+
+<div class="lease-table-grid mt-3 w-50" id="add_lease" style="display: none;">
+    <div class="lease-table-grid-head">Plantilla</div>
+    <div style="grid-column: 2 / span 3"></div>
+
+    <div>
+    <select class="form-select" name="latex-template" id="latex-template">
+        {% for template in templates %}
+            <option value="{{template.0}}">{{template.1}}</option>
+        {% endfor %}
+    </select>
+    </div>
 </div>
 
 {% endblock %}
