--- a/apps/leases/templates/leases/main.html
+++ b/apps/leases/templates/leases/main.html
@@ -24,12 +24,22 @@
             <div></div>
         {% endif %}
     {% endfor %}
-    <div class="mt-3" style="grid-column: 1 / span 1">
-        <button class="btn btn-success" onclick="mytoggle('add_lease')">Nuevo contrato</button>
+</div>
+
+<div class="lease-table-grid mt-3 w-50" id="new-button" style="display: '';">
+    <div class="ml-2 mt-3 mr-2">
+        <button class="btn btn-success" onclick="show_create_lease()">Nuevo contrato</button>
     </div>
 </div>
 
-<div class="lease-table-grid mt-3 w-50" id="add_lease" style="display: none;">
+<div class="lease-table-grid mt-3 w-50" id="create-buttons" style="display: none;">
+    <div class="ml-2 mt-3 mr-2">
+        <button class="btn btn-warning" onclick="show_create_lease()">Cancel</button>
+        <button class="btn btn-success" onclick="show_create_lease()">Save</button>
+    </div>
+</div>
+
+<div class="lease-table-grid mt-3 w-50" id="add-lease" style="display: none;">
     <div class="lease-table-grid-head">Plantilla</div>
     <div class="lease-table-grid-head">Arrendador</div>
     <div class="lease-table-grid-head">Arrendatario</div>
